--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -24,6 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 1\n",
+    "\n",
     "1. The following code accesses the [lyrics.ovh](https://lyricsovh.docs.apiary.io/#reference/0/lyrics-of-a-song/search) public api, searches for the lyrics of a song, and stores it in a dictionary object.  Write the resulting json to a file (either a JSON file or a pickle file; you choose). You will read in the contents of this file for future questions so we do not need to frequently access the API."
    ]
   },
@@ -50,6 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 2\n",
+    "\n",
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
    ]
   },
@@ -94,6 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 3\n",
+    "\n",
     "3. Write a function that takes an artist, song, and filename, accesses the lyrics.ovh api to get the song lyrics, and writes the results to the specified filename.  Test this function by getting the lyrics to any four songs of your choice and storing them in different files."
    ]
   },
@@ -108,6 +114,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 4\n",
+    "\n",
     "4. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score.  Use this function to print the polarity scores (with the name of the song) of the three files you created in question 3.  Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be?  Answer the questions in either a comment in the code cell or a markdown cell under the code cell."
    ]
   },
@@ -121,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -135,11 +143,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0ae41e45250eb696c2277dfbd939b9be222f957334433f60364f37f2e4b8f76d"
+    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
    }
   }
  },
