--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,10 +88,7 @@
     "print('Original Document: \\n', doc)\n",
     "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
     "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
-    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')\n",
-    "\n",
-    "\n",
-    "### QUESTION ----->>>> is a poem ok given the example, lyrics.ovh api not working can we stick with poem?\n"
+    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
    ]
   },
   {
@@ -101,6 +98,35 @@
     "### Question 3\n",
     "\n",
     "3. Write a function that takes an artist, song, and filename, accesses the lyrics.ovh api to get the song lyrics, and writes the results to the specified filename.  Test this function by getting the lyrics to any four songs of your choice and storing them in different files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'William Blake' # 'Rupert Brooke' #  'Robinson'AUTHOR='Rupert Brooke'\n",
+    "request_poem = 'The Tyger' # 'Stanzas of the Rose' # 'Home' # input('What is the name of the poem?')        # \n",
+    "\n",
+    "def function():\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    result = json.loads(requests.get(URL).text)\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    text = str(result)\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "    doc = nlp(text)\n",
+    "    p_score = doc._.blob.polarity\n",
+    "    return doc\n",
+    "\n",
+    "\n",
+    "\n",
+    "function()"
    ]
   },
   {
