--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -135,7 +135,7 @@
     "    p_score = doc._.blob.polarity\n",
     "    return doc\n",
     "\n",
-    "function()"
+    "function(x,y)"
    ]
   },
   {
