--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.14506172839506173\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -30,9 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Document: \n",
+      " [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "\n",
+      "Count of text: 946. Count of doc: 285\n",
+      "\n",
+      "Raw polarity Score: -0.14506172839506173 \n",
+      "Polarity Score: -0.15\n",
+      "\n",
+      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.load('en_core_web_sm')\n",
     "text = str(result)\n",
@@ -48,9 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "t\n",
+      "i\n",
+      "t\n",
+      "l\n",
+      "e\n",
+      "'\n",
+      ":\n"
+     ]
+    }
+   ],
    "source": [
     "for token in text[0:10]:\n",
     "    print (token)"
@@ -58,9 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "title\n",
+      "'\n",
+      ":\n",
+      "'\n",
+      "The\n",
+      "Tyger\n",
+      "'\n"
+     ]
+    }
+   ],
    "source": [
     "for token in doc[0:10]:\n",
     "    print (token)"
@@ -68,9 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title':\n",
+      "'The\n",
+      "Tyger',\n",
+      "'author':\n",
+      "'William\n",
+      "Blake',\n",
+      "'lines':\n",
+      "['Tyger,\n",
+      "tyger,\n",
+      "burning\n"
+     ]
+    }
+   ],
    "source": [
     "for token in text.split()[:10]:\n",
     "    print(token)"
@@ -78,9 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines':\n",
+      "['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  \n",
+      "what the chain?', 'In what furnace was thy brain?', 'What the anvil?\n",
+      "what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n"
+     ]
+    }
+   ],
    "source": [
     "for sent in doc.sents:\n",
     "    print(sent)"
@@ -88,9 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sentence1 \u001b[39m=\u001b[39m doc\u001b[39m.\u001b[39;49msents[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(sentence1)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "sentence1 = doc.sents[0]\n",
     "print(sentence1)"
@@ -193,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,16 +427,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information: \n",
+      "ORG Tyger\n",
+      "PERSON William Blake'\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,12 +466,60 @@
     "    text = str(result)\n",
     "    nlp.add_pipe(\"spacytextblob\")\n",
     "    doc = nlp(text)\n",
+    "\n",
+    "    print('Information: ')\n",
+    "    for entity in doc.ents:\n",
+    "        print(entity.label_, entity.text)\n",
+    "\n",
     "    p_score = doc._.blob.polarity\n",
     "    return doc\n",
     "\n",
-    "\n",
+    "# https://sematext.com/blog/entity-extraction-with-spacy/\n",
     "\n",
     "function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Level 3 spells learned: ', player_character['spells']['level 3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "en = spacy.load('en')\n",
+    "\n",
+    "sents = en(open('input.txt').read())\n",
+    "people = [ee for ee in sents.ents if ee.label_ == 'PERSON']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CARDINAL  |  #\n",
+      "DATE  |  2016\n",
+      "LOC  |  Rafał Kuć - Running High Performance\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(u\"#bbuzz 2016: Rafał Kuć - Running High Performance And Fault Tolerant Elasticsearch\")\n",
+    "for entity in doc.ents:\n",
+    "  print(entity.label_, ' | ', entity.text)"
    ]
   }
  ],
