--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.14506172839506173\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -38,25 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Document: \n",
-      " [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
-      "\n",
-      "Count of text: 946. Count of doc: 285\n",
-      "\n",
-      "Raw polarity Score: -0.14506172839506173 \n",
-      "Polarity Score: -0.15\n",
-      "\n",
-      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nlp = spacy.load('en_core_web_sm')\n",
     "text = str(result)\n",
@@ -72,26 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "{\n",
-      "'\n",
-      "t\n",
-      "i\n",
-      "t\n",
-      "l\n",
-      "e\n",
-      "'\n",
-      ":\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for token in text[0:10]:\n",
     "    print (token)"
@@ -99,26 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "{\n",
-      "'\n",
-      "title\n",
-      "'\n",
-      ":\n",
-      "'\n",
-      "The\n",
-      "Tyger\n",
-      "'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for token in doc[0:10]:\n",
     "    print (token)"
@@ -126,26 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title':\n",
-      "'The\n",
-      "Tyger',\n",
-      "'author':\n",
-      "'William\n",
-      "Blake',\n",
-      "'lines':\n",
-      "['Tyger,\n",
-      "tyger,\n",
-      "burning\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for token in text.split()[:10]:\n",
     "    print(token)"
@@ -153,20 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines':\n",
-      "['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  \n",
-      "what the chain?', 'In what furnace was thy brain?', 'What the anvil?\n",
-      "what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for sent in doc.sents:\n",
     "    print(sent)"
@@ -174,21 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'generator' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sentence1 \u001b[39m=\u001b[39m doc\u001b[39m.\u001b[39;49msents[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(sentence1)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence1 = doc.sents[0]\n",
     "print(sentence1)"
@@ -293,15 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'Home', 'author': 'Rupert Brooke', 'lines': ['I came back late and tired last night', 'Into my little room,', 'To the long chair and the firelight', 'And comfortable gloom.', '', 'But as I entered softly in', 'I saw a woman there,', 'The line of neck and cheek and chin,', 'The darkness of her hair,', 'The form of one I did not know', 'Sitting in my chair.', '', 'I stood a moment fierce and still,', 'Watching her neck and hair.', 'I made a step to her; and saw', 'That there was no one there.', '', 'It was some trick of the firelight', 'That made me see her there.', 'It was a chance of shade and light', 'And the cushion in the chair.', '', 'Oh, all you happy over the earth,', 'That night, how could I sleep?', 'I lay and watched the lonely gloom;', 'And watched the moonlight creep', 'From wall to basin, round the room,', 'All night I could not sleep.'], 'linecount': '24'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -342,43 +236,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Could frame thy fearful symmetry?\n",
-      "\n",
-      "In what distant deeps or skies\n",
-      "Burnt the fire of thine eyes?\n",
-      "On what wings dare he aspire?\n",
-      "What the hand dare seize the fire?\n",
-      "\n",
-      "And what shoulder and what art\n",
-      "Could twist the sinews of thy heart?\n",
-      "And, when thy heart began to beat,\n",
-      "What dread hand and what dread feet?\n",
-      "\n",
-      "What the hammer?  what the chain?\n",
-      "In what furnace was thy brain?\n",
-      "What the anvil? what dread grasp\n",
-      "Dare its deadly terrors clasp?\n",
-      "\n",
-      "When the stars threw down their spears,\n",
-      "And watered heaven with their tears,\n",
-      "Did he smile his work to see?\n",
-      "Did he who made the lamb make thee?\n",
-      "\n",
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Dare frame thy fearful symmetry?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -400,15 +258,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'Home', 'author': 'Rupert Brooke', 'lines': ['I came back late and tired last night', 'Into my little room,', 'To the long chair and the firelight', 'And comfortable gloom.', '', 'But as I entered softly in', 'I saw a woman there,', 'The line of neck and cheek and chin,', 'The darkness of her hair,', 'The form of one I did not know', 'Sitting in my chair.', '', 'I stood a moment fierce and still,', 'Watching her neck and hair.', 'I made a step to her; and saw', 'That there was no one there.', '', 'It was some trick of the firelight', 'That made me see her there.', 'It was a chance of shade and light', 'And the cushion in the chair.', '', 'Oh, all you happy over the earth,', 'That night, how could I sleep?', 'I lay and watched the lonely gloom;', 'And watched the moonlight creep', 'From wall to basin, round the room,', 'All night I could not sleep.'], 'linecount': '24'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -427,29 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Information: \n",
-      "ORG Tyger\n",
-      "PERSON William Blake'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -503,24 +333,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(u\"#bbuzz 2016: Rafał Kuć - Running High Performance And Fault Tolerant Elasticsearch\")\n",
+    "for entity in doc.ents:\n",
+    "  print(entity.label_, ' | ', entity.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'William Blake' # 'Rupert Brooke' #  'Robinson'AUTHOR='Rupert Brooke'\n",
+    "request_poem = 'The Tyger' # 'Stanzas of the Rose' # 'Home' # input('What is the name of the poem?')        # \n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "result = json.loads(requests.get(URL).text)\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text = str(result)\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "\n",
+    "# https://sematext.com/blog/entity-extraction-with-spacy/\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(result['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'William Blake' \n",
+    "request_poem = 'The Tyger'\n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "json_object = json.loads(requests.get(URL).text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answers = '[{\"preview\":true,\"offset\":0,\"result\":{\"Country\":\"AU\",\"count\":\"417\"}}' + \\\n",
+    "          ',{\"preview\":true,\"offset\":1,\"result\":{\"Country\":\"BG\",\"count\":\"7\"}}]'\n",
+    "json_obj = json.loads(answers)\n",
+    "for i in json_obj:\n",
+    "    print(i['result']['Country'], i['result']['count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CARDINAL  |  #\n",
-      "DATE  |  2016\n",
-      "LOC  |  Rafał Kuć - Running High Performance\n"
+      "Title:  The Tyger \n",
+      "Author: William Blake\n"
      ]
     }
    ],
    "source": [
-    "doc = nlp(u\"#bbuzz 2016: Rafał Kuć - Running High Performance And Fault Tolerant Elasticsearch\")\n",
-    "for entity in doc.ents:\n",
-    "  print(entity.label_, ' | ', entity.text)"
+    "for i in json_object:\n",
+    "    print('Title: ',i['title'], '\\nAuthor:', i['author'] )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'Blake'#'Robinson' # input('What is the name of the author?') 'Rupert Brooke''William Blake'\n",
+    "request_poem = 'Tyger'# Home' # input('What is the name of the poem?')'Stanzas of the Rose''The Tyger'\n",
+    "\n",
+    "def function():\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    result = json.loads(requests.get(URL).text)\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    text = str(result)\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "    doc = nlp(text)\n",
+    "    p_score = doc._.blob.polarity\n",
+    "    return doc\n",
+    "\n",
+    "function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'Blake'#'Robinson' # input('What is the name of the author?') 'Rupert Brooke''William Blake'\n",
+    "request_poem = 'Tyger'# Home' # input('What is the name of the poem?')'Stanzas of the Rose''The Tyger'\n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "json_object = json.loads(requests.get(URL).text)\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text=str(json_object)\n",
+    "doc = nlp(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "request_name = 'Blake'#'Robinson' # input('What is the name of the author?') 'Rupert Brooke''William Blake'\n",
+    "request_poem = 'Tyger'# Home' # input('What is the name of the poem?')'Stanzas of the Rose''The Tyger'\n",
+    "\n",
+    "def write_item_from_this_API_to_json():\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    json_object = json.loads(requests.get(URL).text)\n",
+    "    print(json_object)\n",
+    "\n",
+    "def list_item_information():\n",
+    "    for i in json_object:\n",
+    "        print('Title: ',i['title'], '\\nAuthor:', i['author'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
